fix incorrect csv file

--- a/experiments/instances/index.html
+++ b/experiments/instances/index.html
@@ -43,9 +43,7 @@
         <td title="'Q3HEsize'" sortable="'Q3HEsize'" align="right">
             {{instance.Q3HEsize}}</td>
         <td title="'maxHEsize'" sortable="'maxHEsize'" align="right">
-            {{instance.Q1HEsize}}</td>
-        <td title="'maxHEsize'" sortable="'maxHEsize'" align="right">
-            {{instance.Q1HEsize}}</td>
+            {{instance.maxHEsize}}</td>
         <td title="'avgHNdegree'" sortable="'avgHNdegree'" align="right">
             {{instance.avgHNdegree}}</td>
         <td title="'sdHNdegree'" sortable="'sdHNdegree'" align="right">
